--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -22,6 +22,7 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textStyle="bold"
         />
 </LinearLayout>
 
